Aligned but with issues

--- a/src/styles/sections/Photo_Slides.module.css
+++ b/src/styles/sections/Photo_Slides.module.css
@@ -1,13 +1,14 @@
 .Photo_Slides {
   width: 100%;
-  height: 100%;
-  max-height: 550px;
+  height: var(--photo-slides-height, 100%);
+  max-height: var(--photo-slides-height, 100%);
+  min-height: 200px;
 }
 
-.Photo_Slides :global(.swiper) {
+.Photo_Slides :global(.swiper),
+.Photo_Slides :global(.swiper-wrapper) {
   width: 100%;
   height: 100%;
-  max-height: 550px;
 }
 
 .Photo_Slides :global(.swiper-slide) {
@@ -15,6 +16,13 @@
   align-items: center;
   justify-content: center;
   background: #fff;
+  height: 100%;
+}
+
+.SlideImage {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .Photo_Slides :global(.swiper-slide img) {
@@ -22,4 +30,23 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.SingleSlide {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.SingleSlide :global(img),
+.SlideImage :global(img) {
+  object-fit: cover;
+}
+
+@media (max-width: 640px) {
+  .Photo_Slides {
+    height: var(--photo-slides-height-mobile, var(--photo-slides-height, 100%));
+    max-height: var(--photo-slides-height-mobile, var(--photo-slides-height, 100%));
+    min-height: 200px;
+  }
 }
